syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.zequent.framework.common.proto";
option java_outer_classname = "CommonProto";
option go_package = "zequent/framework/gen/proto";


enum RemoteControlCommands {
  ARM = 0;
  DISARM = 1;
  TAKEOFF = 2;
  LAND = 3;
  RETURN_TO_HOME = 4;
  GOTO = 5;
  OPEN_DOCK = 6;
  CLOSE_DOCK = 7;
  START_CHARGING = 8;
  STOP_CHARGING = 9;

  OPEN_REMOTE_DEBUGGING = 10;
  CLOSE_REMOTE_DEBUGGING = 11;
  GRAB_FLIGHT_AUTH = 12;
  GRAB_PAYLOAD_AUTH = 13;

  BOOT_UP_DRONE = 14;
  BOOT_DOWN_DRONE = 15;
  DOCK_AC_COOLING_MODE = 16;
  DOCK_AC_HEATING_MODE = 17;
  DOCK_AC_DEHUMIDIFICATION_MODE = 18;
  DOCK_AC_IDLE_MODE = 19;

  ENTER_REMOTE_CONTROL_MODE = 20;
  EXIT_REMOTE_CONTROL_MODE = 21;
  LIVE_STREAM_CHANGE_LENS = 22;
  HEARTBEAT = 23;
  LIVE_STREAM_CHANGE_ZOOM = 24;

  LIVE_STREAM_IR_ENABLE_TEMP_MEASUREMENT = 25;
  LIVE_STREAM_IR_DISABLE_TEMP_MEASUREMENT = 26;
  LIVE_STREAM_STATUS = 27;

  CLOSE_DOCK_FORCE = 28;
  LOOK_AT = 29;
  DETECTION_START = 30;
  ENABLE_DETECTION_TRACKING = 31;
  DETECTION_STOP = 32;
  DISABLE_DETECTION_TRACKING = 33;

}
enum ManualControlStateEnum{
  MANUAL_CONTROL_STATE_DISCONNECTED = 0;
  MANUAL_CONTROL_STATE_CONNECTING = 1;
  MANUAL_CONTROL_STATE_CONNECTED = 2;
}
enum LiveDataServiceCommand{
  START_TELEMETRY_STREAM = 0;
  GET_TELEMETRY_DATA = 1;
  STOP_TELEMETRY_STREAM = 2;
  START_LIVE_STREAM = 3;
  STOP_LIVE_STREAM = 4;
}

enum LiveDataType{
  ASSET_TELEMETRY = 0;
  SUBASSET_TELEMETRY = 1;

}

enum RainfallEnum{
  RAINFALL_NO = 0;
  RAINFALL_LIGHT = 1;
  RAINFALL_MODERATE = 2;
  RAINFALL_HEAVY = 3;
}
enum NetworkTypeEnum{
  NETWORK_TYPE_4_G = 0;
  NETWORK_TYPE_ETHERNET = 1;
}

enum AssetCoverStateEnum{
  COVER_STATE_CLOSED = 0;
  COVER_STATE_OPENED = 1;
  COVER_STATE_HALF_OPEN = 2;
  COVER_STATE_ABNORMAL = 3;
}

enum NetworkStateQualityEnum{
  NETWORK_STATE_QUALITY_NO_SIGNAL = 0;
  NETWORK_STATE_QUALITY_BAD = 1;
  NETWORK_STATE_QUALITY_POOR = 2;
  NETWORK_STATE_QUALITY_FAIR = 3;
  NETWORK_STATE_QUALITY_GOOD = 4;
  NETWORK_STATE_QUALITY_EXCELLENT = 5;
}


enum AssetAirConditionerStateEnum{
  AIR_CONDITIONER_IDLE = 0;
  AIR_CONDITIONER_COOL = 1;
  AIR_CONDITIONER_HEAT = 2;
  AIR_CONDITIONER_DEHUMIDIFICATION = 3;
  AIR_CONDITIONER_COOLING_EXIT = 4;
  AIR_CONDITIONER_HEATING_EXIT = 5;
  AIR_CONDITIONER_DEHUMIDIFICATION_EXIT = 6;
  AIR_CONDITIONER_COOLING_PREPARATION = 7;
  AIR_CONDITIONER_HEATING_PREPARATION = 8;
  AIR_CONDITIONER_DEHUMIDIFICATION_PREPARATION = 9;
  AIR_CONDITIONER_DISCONNECTED = 10;
}



enum AssetModes{
  ASSET_MODE_IDLE = 0;
  ASSET_MODE_DEBUGGING = 1;
  ASSET_MODE_REMOTE_DEBUGGING = 2;
  ASSET_MODE_UPGRADING = 3;
  ASSET_MODE_WORKING = 4;
  ASSET_MODE_TO_BE_CALIBRATED = 5;
}


enum SubAssetMode{
  SUBASSET_MODE_IDLE = 0;
  SUBASSET_MODE_TAKEOFF_PREPARE = 1;
  SUBASSET_MODE_TAKEOFF_FINISHED = 2;
  SUBASSET_MODE_MANUAL = 3;
  SUBASSET_MODE_TAKEOFF_AUTO = 4;
  SUBASSET_MODE_WAYLINE = 5;
  SUBASSET_MODE_PANORAMIC_SHOT = 6;
  SUBASSET_MODE_ACTIVE_TRACK = 7;
  SUBASSET_MODE_ADS_B_AVOIDANCE = 8;
  SUBASSET_MODE_RETURN_AUTO = 9;
  SUBASSET_MODE_LANDING_AUTO = 10;
  SUBASSET_MODE_LANDING_FORCE = 11;
  SUBASSET_MODE_LANDING_THREE_PROPELLER = 12;
  SUBASSET_MODE_UPGRADING = 13;
  SUBASSET_MODE_DISCONNECTED = 14;
  SUBASSET_MODE_APAS = 15;
  SUBASSET_MODE_VIRTUAL_JOYSTICK = 16;
  SUBASSET_MODE_LIVE_FLIGHT_CONTROLS = 17;
  SUBASSET_MODE_AERIAL_RTK_FIXED = 18;
  SUBASSET_MODE_DOCK_SITE_EVALUATION = 19;
  SUBASSET_MODE_POI = 20;
}
enum ErrorCodes{
  SYSTEM_ERROR = 0;
  CLIENT_ERROR = 1;
  SDK_ERROR = 2;
  SERVICE_ERROR = 3;
  ASSET_ERROR = 4;
}


message GlobalErrorMessage{
  google.protobuf.Timestamp timestamp = 1;
  string errorMessage = 2;
  ErrorCodes errorCode = 3;
}

enum AssetTypeEnum{
  ASSET_TYPE_UNKNOWN = 0;
  ASSET_TYPE_AIRCRAFT = 1;
  ASSET_TYPE_DOCK = 2;
  ASSET_TYPE_SENSOR = 3;
  ASSET_TYPE_CAMERA = 4;
  ASSET_TYPE_OTHER = 5;
}


enum AssetVendor{
  DJI = 0;
  AUTEL = 1;
  ROS = 2;
  MAVLINK = 3;
  RTMP_RTSP = 4;
}

enum AssetConnection{
  MQTT = 0;
  IP = 1;
  SERIAL = 2;
}

enum LiveStreamTypeEnum{
  LIVE_STREAM_TYPE_UNKNOWN = 0;
  LIVE_STREAM_TYPE_RTMP = 1;
  LIVE_STREAM_TYPE_RTSP = 2;
  LIVE_STREAM_TYPE_WEBRTC = 3;
}

enum SchedulerType{
  OPERATION = 0;
  TASK = 1;
  SYSTEM_JOBS = 2;
  ORGANIZATION = 3;
  DATABASE = 4;
  CONNECTORS = 5;
}

enum MissionAutonomyCommands {
  COMMAND_UNSPECIFIED = 0;
  CREATE_OPERATION = 1;
  UPDATE_OPERATION = 2;
  DELETE_OPERATION = 3;
  CREATE_TASK = 4;
  UPDATE_TASK = 5;
  DELETE_TASK = 6;
  GET_OPERATION_BY_ID = 7;
  GET_ALL_OPERATIONS = 8;
  GET_TASK_BY_FLIGHT_ID = 9;
  GET_ALL_TASKS_FOR_OPERATION = 10;
  GET_ALL_TASKS_FOR_ASSET = 11;
  PREPARE_TASK = 12;
  START_TASK = 13;
  CANCEL_TASK = 14;
  UPLOAD_TASK_TO_STORAGE = 15;
  OPERATION_EVENTS = 16;
  REGISTER_TASK_ON_ASSET = 17;
  PAUSE_TASK = 18;
  RESUME_TASK = 19;
}

enum VehicleAction{
  VEHICLE_ACTION_NONE = 0;
  VEHICLE_ACTION_TAKEOFF = 1;
  VEHICLE_ACTION_LAND = 2;
}

enum FlyToWaylineModeProto{
  FTW_MODE_SAFELY = 0;
  FTW_MODE_POINT_TO_POINT = 1;
}

enum WaylineFinishActionProto{
  WF_ACTION_GO_HOME = 0;
  WF_ACTION_NO_ACTION = 1;
  WF_ACTION_AUTO_LANDING = 2;
  WF_ACTION_GOTO_FIRST_WAYPOINT = 3;
  WF_ACTION_STOP = 4;
}

enum ExitWaylineWhenRcLostEnumProto{
  EWWRL_CONTINUE = 0;
  EWWRL_EXECUTE_RC_LOST_ACTION = 1;
}

enum RcLostActionEnumProto{
  RC_LOST_ACTION_HOVER = 0;
  RC_LOST_ACTION_LAND = 1;
  RC_LOST_ACTION_RETURN_HOME = 2;
}

enum WaylineTypeEnumProto{
  WT_WAYPOINT = 0;
  WT_MAPPING_2D = 1;
  WT_MAPPING_3D = 2;
  WT_MAPPING_STRIP = 3;
}

enum WaylineTurnModeProto{
  WT_MODE_COORDINATE_TURN = 0;
  WT_MODE_TO_POINT_AND_STOP_WITH_DISCONTINUITY_CURVATURE = 1;
  WT_MODE_TO_POINT_AND_STOP_WITH_CONTINUITY_CURVATURE = 2;
  WT_MODE_TO_POINT_AND_PASS_WITH_CONTINUITY_CURVATURE = 3;
}

enum WaylineGimbalPitchModeProto{
  WGP_MODE_MANUAL = 0;
  WGP_MODE_POINT_SETTINGS = 1;
  WGP_MODE_LOOK_DOWN = 2;
}

enum RthModeEnumProto{
  RTH_MODE_OPTIMAL = 0;
  RTH_MODE_PRESET = 1;
}

enum OutOfControlActionEnumProto{
  OOC_RETURN_TO_HOME = 0;
  OOC_HOVERING = 1;
  OOC_LANDING = 2;
}

enum WaylinePrecisionTypeEnumProto{
  PRECISION_GPS = 0;
  PRECISION_RTK = 1;
}



enum FlighttaskBreakReasonEnumProto{
  BREAK_REASON_NORMAL = 0;
  BREAK_REASON_NOT_ID = 1;
  BREAK_REASON_UNCOMMON_ERROR = 2;
  BREAK_REASON_ERROR_LOADING_FILE = 3;
  BREAK_REASON_ERROR_BREAKPOINT_FILE = 4;
  BREAK_REASON_INCORRECT_PARAMETER = 5;
  BREAK_REASON_PARSING_FILE_TIMEOUT = 6;
  BREAK_REASON_ALREADY_STARTED = 7;
  BREAK_REASON_UNABLE_TO_INTERRUPT_WAYLINE = 8;
  BREAK_REASON_NOT_STARTED = 9;
  BREAK_REASON_FLIGHT_MISSION_CONFLICT = 10;
  BREAK_REASON_UNABLE_TO_RESUME_WAYLINE = 11;
  BREAK_REASON_MAXIMUM_ALTITUDE_LIMIT = 12;
  BREAK_REASON_MAXIMUM_DISTANCE_LIMIT = 13;
  BREAK_REASON_TOO_LOW_HEIGHT = 14;
  BREAK_REASON_OBSTACLE_AVOIDANCE = 15;
  BREAK_REASON_POOR_RTK = 16;
  BREAK_REASON_BOUNDARY_OF_RESTRICTED_ZONE = 17;
  BREAK_REASON_GEO_ALTITUDE_LIMIT = 18;
  BREAK_REASON_TAKEOFF_REQUEST_FAILED = 19;
  BREAK_REASON_TAKEOFF_EXECUTION_FAILED = 20;
  BREAK_REASON_WAYLINE_MISSION_REQUEST_FAILED = 21;
  BREAK_REASON_RTK_FIXING_REQUEST_FAILED = 22;
  BREAK_REASON_RTK_FIXING_EXECUTION_FAILED = 23;
  BREAK_REASON_WEAK_GPS = 24;
  BREAK_REASON_ERROR_RC_MODE = 25;
  BREAK_REASON_HOME_POINT_NOT_REFRESHED = 26;
  BREAK_REASON_LOW_BATTERY = 27;
  BREAK_REASON_LOW_BATTERY_RTH = 28;
  BREAK_REASON_RC_DISCONNECTION = 29;
  BREAK_REASON_ON_THE_GROUND = 30;
  BREAK_REASON_ABNORMAL_VISUAL_STATUS = 31;
  BREAK_REASON_INVALID_ALTITUDE = 32;
  BREAK_REASON_CALCULATION_ERROR = 33;
  BREAK_REASON_STRONG_WINDS_RTH = 34;
  BREAK_REASON_USER_EXIT = 35;
  BREAK_REASON_USER_INTERRUPTION = 36;
  BREAK_REASON_USER_TRIGGERED_RTH = 37;
  BREAK_REASON_INCORRECT_START_INFORMATION = 38;
  BREAK_REASON_UNSUPPORTED_COORDINATE_SYSTEM = 39;
  BREAK_REASON_UNSUPPORTED_ALTITUDE_MODE = 40;
  BREAK_REASON_UNSUPPORTED_TRANSITIONAL_WAYLINE_MODE = 41;
  BREAK_REASON_UNSUPPORTED_YAW_MODE = 42;
  BREAK_REASON_UNSUPPORTED_YAW_DIRECTION_REVERSAL_MODE = 43;
  BREAK_REASON_UNSUPPORTED_WAYPOINT_TYPE = 44;
  BREAK_REASON_INVALID_COORDINATED_TURNING_TYPE = 45;
  BREAK_REASON_INVALID_GLOBAL_SPEED = 46;
  BREAK_REASON_WAYPOINT_NUMBER_ABNORMAL = 47;
  BREAK_REASON_INVALID_LATITUDE_AND_LONGITUDE = 48;
  BREAK_REASON_ABNORMAL_TURNING_INTERCEPT = 49;
  BREAK_REASON_INVALID_SEGMENT_MAXIMUM_SPEED = 50;
  BREAK_REASON_INVALID_TARGET_SPEED = 51;
  BREAK_REASON_INVALID_YAW_ANGLE = 52;
  BREAK_REASON_BREAKPOINT_INVALID_MISSION_ID = 53;
  BREAK_REASON_BREAKPOINT_INVALID_PROGRESS_INFORMATION = 54;
  BREAK_REASON_BREAKPOINT_ERROR_MISSION_STATE = 55;
  BREAK_REASON_BREAKPOINT_INVALID_INDEX_INFORMATION = 56;
  BREAK_REASON_BREAKPOINT_INCORRECT_LATITUDE_AND_LONGITUDE = 57;
  BREAK_REASON_BREAKPOINT_INVALID_YAW = 58;
  BREAK_REASON_BREAKPOINT_INCORRECT_FLAG_SETTING = 59;
  BREAK_REASON_WAYLINE_GENERATION_FAILED = 60;
  BREAK_REASON_WAYLINE_EXECUTION_FAILED = 61;
  BREAK_REASON_WAYLINE_OBSTACLE_SENSING = 62;
  BREAK_REASON_UNRECOGNIZED_ACTION_TYPE = 63;
  BREAK_REASON_DUPLICATE_ACTION_ID = 64;
  BREAK_REASON_ACTION_ID_NOT_65535 = 65;
  BREAK_REASON_INVALID_NUMBER_OF_ACTION_GROUPS = 66;
  BREAK_REASON_ERROR_EFFECTIVE_RANGE = 67;
  BREAK_REASON_BREAKPOINT_INVALID_ACTION_INDEX = 68;
  BREAK_REASON_BREAKPOINT_TRIGGER_RUNNING_ABNORMAL = 69;
  BREAK_REASON_BREAKPOINT_DUPLICATE_ACTION_GROUP_ID = 70;
  BREAK_REASON_BREAKPOINT_DUPLICATE_ACTION_GROUP_POSITION = 71;
  BREAK_REASON_BREAKPOINT_INVALID_ACTION_GROUP_POSITION = 72;
  BREAK_REASON_BREAKPOINT_INVALID_ACTION_ID = 73;
  BREAK_REASON_BREAKPOINT_UNABLE_TO_INTERRUPT = 74;
  BREAK_REASON_INCORRECT_BREAKPOINT_INFORMATION = 75;
  BREAK_REASON_BREAKPOINT_UNRECOGNIZED_ACTION_TYPE = 76;
  BREAK_REASON_BREAKPOINT_UNRECOGNIZED_TRIGGER_TYPE = 77;
  BREAK_REASON_UNKNOWN_ERROR_1 = 78;
  BREAK_REASON_UNKNOWN_ERROR_2 = 79;
}



enum TaskGoals{
  TASK_UNDEFINED = 0;
  TRACK = 1;
  FOLLOW = 2;
  SIMPLE = 3;
  DETECT = 4;
}

enum TaskStatus {
  TASK_UNKNOWN = 0;
  TASK_DRAFT = 1;
  TASK_SCHEDULED = 2;
  TASK_RUNNING = 3;
  TASK_ERROR = 4;
  TASK_COMPLETED = 5;
  TASK_PREPARED = 6;
  TASK_PAUSED = 7;
}


enum MissionType{
  STANDARD = 0;
  REMOTE_OPS = 1;
  DRF = 2;
  MISSION = 3;
}
enum MissionStatus{
  OPERATION_UNKNOWN = 0;
  OPERATION_DRAFT = 1;
  OPERATION_ACTIVE = 2;
  OPERATION_INACTIVE = 3;
  OPERATION_ERROR = 4;
}



message Capability{
  string command = 1;
  string description = 2;
  bool available = 3;
  optional string unavailableReason = 4;
  map<string, string> metadata = 5;
}

message CurrentCapabilities{
  string assetSn = 1;
  AssetTypeEnum assetType = 2;
  repeated Capability capabilities = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// ========== SHARED COORDINATE AND CONTROL MESSAGES ==========

message Coordinates {
  double latitude = 1;
  double longitude = 2;
  double altitude = 3;
}



message ReturnToHomeRequest{
  optional float altitude = 1;
}



message ManualControlRequest{
  string clientId = 1;
  string userId = 2;
  optional string reason = 3;
  string sessionId = 4;
}

message ManualControlInput{
  optional float roll = 1;
  optional float pitch = 2;
  optional float yaw = 3;
  optional float throttle = 4;
  optional float gimbalPitch = 5;
}


message LiveStreamState{
  string videoId = 1;
  string streamUrl = 2;
  bool isLive = 3;
  google.protobuf.Timestamp startedAt = 4;
  AssetTypeEnum assetType = 5;
  //bool isAvailable = 6;
}
message LiveStreamStartResponse {
  string streamUrl = 1;
  string videoId = 2;
}
message ChangeCameraLensRequest{
  optional string lens = 1;
}

message ChangeCameraZoomRequest{
  optional string lens = 1;
  optional int32 zoom = 2;
}

message DetectionControlRequest{
  enum DetectionControlCommand{
    DETECTION_START = 0;
    DETECTION_STOP = 1;
  }
  DetectionControlCommand command = 1;
  optional string assetSn = 2;
  optional string subAssetSn = 3;
  optional string taskId = 4;
  optional string streamUrl = 5;
  optional bool gimbalTrackingEnabled = 6;
}

message CommandProgress{
  float progress = 1;
  string state = 2;
  float leftTimeInSeconds = 3;
}

message ManualControlState {
  ManualControlStateEnum state = 1;
  string sn = 2;
  optional string assetId = 3;
  bool active = 4;
  string clientId = 5;
  string userId = 6;
  string sessionId = 7;
}

message RequestBase {
  string tid = 1;           // Transaction ID
  string sn = 2;            // Serial Number / Asset Serial Number
  google.protobuf.Timestamp timestamp = 3;
}


message AssetProtoDTO{
  string id = 1;
  string sn = 2;
  string name = 3;
  AssetTypeEnum type = 4;
  AssetVendor vendor = 5;
  AssetConnection connection = 6;
  optional string connectionString = 7;
  string model = 8;
  optional int32 port = 9;
  optional string liveStreamServer = 10;
  optional string externalDeviceType = 11;
  optional string externalDeviceSubType = 12;
  string organization = 13;
  bool online = 14;
  optional SubAssetProtoDTO subAssetDTO = 15;
  optional string externalId = 16;
  LiveStreamTypeEnum streamType = 17;
}

message SubAssetProtoDTO{
  string id = 1;
  string sn = 2;
  string name = 3;
  AssetTypeEnum type = 4;
  AssetVendor vendor = 5;
  AssetConnection connection = 6;
  optional string connectionString = 7;
  string model = 8;
  optional int32 port = 9;
  optional string liveStreamServer = 10;
  optional string externalDeviceType = 11;
  optional string externalDeviceSubType = 12;
  string organization = 13;
  bool online = 14;
  optional string externalId = 15;
  LiveStreamTypeEnum streamType = 16;
}

message OrganizationProtoDTO{
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string assets = 4;
}

message MissionProtoDTO{
  optional string id = 1;
  string name = 2;
  string description = 3;
  repeated TaskProtoDTO tasks = 4;
  MissionStatus status = 5;
  MissionType type = 6;
  optional string geoJson = 7;
  optional google.protobuf.Timestamp startDate = 8;
  optional google.protobuf.Timestamp endDate = 9;
  repeated string assignedAssets = 10;
  optional google.protobuf.Timestamp createdAt = 11;
  optional google.protobuf.Timestamp updatedAt = 12;
  optional string updatedUser = 13;
}

message TaskProtoDTO{
  optional string id = 1;
  optional string missionId = 2;
  optional string name = 3;
  optional string description = 4;
  TaskStatus status = 5;
  repeated WaypointProtoDTO waypoints = 6;
  optional string assetId = 7;
  optional string snNumber = 8;
  optional FlyToWaylineModeProto flyToWaylineMode = 9;
  optional WaylineFinishActionProto waylineFinishAction = 10;
  optional ExitWaylineWhenRcLostEnumProto exitWaylineWhenRcLostEnum = 11;
  optional RcLostActionEnumProto rcLostActionEnum = 12;
  optional float takeOffSecurityHeight = 13;
  optional float globalTransitionSpeed = 14;
  optional WaylineTypeEnumProto waylineType = 15;
  optional string payloadImagingType = 16;
  optional WaylineTurnModeProto waylineTurnMode = 17;
  optional bool useStraightLine = 18;
  optional WaylineGimbalPitchModeProto gimbalPitchMode = 19;
  optional float globalSpeed = 20;
  optional float globalHeight = 21;
  optional string fileUrl = 22;
  optional string fileMd5 = 23;
  optional string flightAreaFileUrl = 24;
  optional string flightAreaChecksum = 25;
  optional int32 rthAltitude = 26;
  optional RthModeEnumProto rthMode = 27;
  optional float rthSpeed = 28;
  optional OutOfControlActionEnumProto outOfControlAction = 29;
  optional WaylinePrecisionTypeEnumProto waylinePrecisionType = 30;
  optional string flightId = 31;
  optional int32 currentProgress = 32;
  optional string currentStep = 33;
  optional FlighttaskBreakReasonEnumProto breakReason = 34;
  optional google.protobuf.Timestamp createdAt = 35;
  optional google.protobuf.Timestamp updatedAt = 36;
  optional int32 globalGimbalPitch = 37;

}


message WaypointProtoDTO{
  optional string id = 1;
  optional string taskId = 2;
  double latitude = 3;
  double longitude = 4;
  optional float altitude = 5;
  optional float speed = 6;
  optional bool flyTrough = 7;
  optional VehicleAction vehicleAction = 8;
  optional int32 wpOrder = 9;
  optional int32 gimbalPitch = 10;
}

message SchedulerProtoDTO{
  string id = 1;
  string name = 2;
  optional string missionId = 3;
  optional string taskId = 4;
  string cronExpression = 5;
  optional bool active = 6;
  SchedulerType type = 7;
  optional string clientTimeZone = 8;
}
