syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";


option java_multiple_files = true;
option java_package = "com.zequent.framework.services.connector.proto";
option java_outer_classname = "ConnectorProto";
option go_package = "zequent/framework/gen/proto";




service ConnectorService{

  rpc RegisterAsset(ConnectorRegisterAssetRequest) returns (ConnectorResponse);
  rpc DeRegisterAsset(ConnectorDeRegisterAssetRequest) returns (ConnectorResponse);
  rpc AssetMonitoring(ConnectorAssetMonitorRequest) returns (stream AssetMonitoringResponse);
  rpc UpdateAsset(ConnectorUpdateAssetRequest) returns (ConnectorResponse);
  rpc GetAssetBySn(ConnectorGetAssetBySnRequest) returns (ConnectorResponse);
  rpc GetAssetById(ConnectorGetAssetByIdRequest) returns(ConnectorResponse);
  rpc GetSubAssetBySn(ConnectorGetSubAssetBySnRequest) returns (ConnectorResponse);
  rpc GetOrganization(ConnectorGetOrganizationRequest) returns(ConnectorResponse);
  rpc GetMission(ConnectorGetMissionRequest) returns (ConnectorResponse);
  rpc CreateMission(ConnectorCreateMissionRequest) returns (ConnectorResponse);
  rpc UpdateMission(ConnectorUpdateMissionRequest) returns (ConnectorResponse);
  rpc DeleteMission(ConnectorDeleteMissionRequest) returns (ConnectorResponse);
  rpc GetTask(ConnectorGetTaskRequest) returns (ConnectorResponse);
  rpc GetTaskByFlightId(ConnectorGetTaskRequest) returns (ConnectorResponse);
  rpc GetWaypointsByTaskId(ConnectorGetWaypointsByTaskId) returns (ConnectorResponse);
  rpc CreateTask(ConnectorCreateTaskRequest) returns (ConnectorResponse);
  rpc UpdateTask(ConnectorUpdateTaskRequest) returns (ConnectorResponse);
  rpc DeleteTask(ConnectorDeleteTaskRequest) returns (ConnectorResponse);
  rpc GetScheduler(ConnectorGetSchedulerRequest) returns (ConnectorResponse);
  rpc CreateScheduler(ConnectorCreateSchedulerRequest) returns (ConnectorResponse);
  rpc UpdateScheduler(ConnectorUpdateSchedulerRequest) returns (ConnectorResponse);
  rpc DeleteScheduler(ConnectorDeleteSchedulerRequest) returns (ConnectorResponse);

  // Telemetry Storage - batch processing from live-data service
  rpc StoreTelemetryBatch(stream ConnectorStoreTelemetryRequest) returns (ConnectorResponse);

}

message ConnectorGetAssetByIdRequest{
 RequestBase base = 1;
 string id = 2;
}

message ConnectorGetWaypointsByTaskId{
  RequestBase base = 1;
  string taskId = 2;
}
message ConnectorDeleteSchedulerRequest{
  RequestBase base = 1;
  string schedulerId = 2;
}
message ConnectorUpdateSchedulerRequest{
  RequestBase base = 1;
  SchedulerProtoDTO schedulerDTO = 2;
  string schedulerId = 3;
}
message ConnectorCreateSchedulerRequest{
  RequestBase base = 1;
  SchedulerProtoDTO schedulerDTO = 2;
}
message ConnectorGetSchedulerRequest{
  RequestBase base = 1;
  string schedulerId = 2;
}
message ConnectorDeleteTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
}
message ConnectorUpdateTaskRequest{
  RequestBase base = 1;
  TaskProtoDTO taskDTO = 2;
  string taskId = 4;
}

message AssetDTOList{
  repeated AssetProtoDTO assets = 1;
}
message ConnectorRegisterAssetRequest{
  RequestBase base = 1;
  AssetProtoDTO assetDTO = 2;
}

message ConnectorUpdateAssetRequest{
  RequestBase base = 1;
  AssetProtoDTO assetDTO = 2;
  string assetId = 3;
}
message ConnectorUpdateSubAssetRequest{
  RequestBase base = 1;
  SubAssetProtoDTO subAssetDTO = 2;
  string subAssetId = 3;
}

message WaypointsListDTO {
  repeated WaypointProtoDTO waypoints = 1;
}

message ConnectorResponse{
  string tid = 1;
  optional string id = 2;
  google.protobuf.Timestamp timestamp = 3;
  optional bool hasErrors = 4;
  optional string assetId = 5;
  oneof response{
    google.protobuf.Empty empty = 6;
    GlobalErrorMessage error = 7;
    AssetProtoDTO assetDTO = 8;
    SubAssetProtoDTO subAssetDTO = 9;
    OrganizationProtoDTO organizationDTO = 10;
    MissionProtoDTO missionDTO = 11;
    TaskProtoDTO taskDTO = 12;
    SchedulerProtoDTO schedulerDTO = 13;
    WaypointsListDTO waypointDTOList = 14;
  }
  optional string responseMessage = 15;
}

message AssetMonitoringResponse{
  string tid = 1;
  google.protobuf.Timestamp timestamp = 2;
  bool hasErrors = 3;
  oneof response {
    google.protobuf.Empty empty = 4;
    GlobalErrorMessage error = 5;
    AssetDTOList assetList = 6;
  }
}

message ConnectorDeRegisterAssetRequest{
  RequestBase base = 1;
}

message ConnectorAssetMonitorRequest{
  RequestBase base = 1;
}

message ConnectorGetAssetBySnRequest{
  RequestBase base = 1;
}

message ConnectorGetSubAssetBySnRequest{
  RequestBase base = 1;
}

message ConnectorGetOrganizationRequest{
  RequestBase base = 1;
  optional string bindCode = 2;
}

message ConnectorGetMissionRequest{
  RequestBase base = 1;
  string missionId = 2;
}

message ConnectorCreateMissionRequest{
  RequestBase base = 1;
  MissionProtoDTO missionDTO = 2;
}

message ConnectorUpdateMissionRequest{
  RequestBase base = 1;
  string missionId = 2;
  MissionProtoDTO missionDTO = 3;
}

message ConnectorDeleteMissionRequest{
  RequestBase base = 1;
  string missionId = 2;
}


message ConnectorGetTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
}

message ConnectorCreateTaskRequest{
  RequestBase base = 1;
  TaskProtoDTO taskDTO = 2;
}

// ========== TELEMETRY STORAGE ==========

message ConnectorStoreTelemetryRequest {
  RequestBase base = 1;
  TelemetryType type = 2;
  oneof telemetry {
    AssetTelemetryProto assetTelemetry = 3;
    SubAssetTelemetryProto subAssetTelemetry = 4;
  }
}

enum TelemetryType {
  TELEMETRY_TYPE_UNSPECIFIED = 0;
  TELEMETRY_TYPE_ASSET = 1;
  TELEMETRY_TYPE_SUBASSET = 2;
}

message AssetTelemetryProto {
  string assetId = 1;
  google.protobuf.Timestamp timestamp = 2;
  optional double latitude = 3;
  optional double longitude = 4;
  optional double altitude = 5;
  optional double relativeAltitude = 6;
  optional double heading = 7;
  optional double temperature = 8;
  optional double humidity = 9;
  optional double windSpeed = 10;
  optional double batteryPercentage = 11;
  optional string networkType = 12;
  optional int32 networkQuality = 13;
  optional string operationalMode = 14;
  optional bool isOnline = 15;
  string sourceSystem = 16;
  map<string, string> telemetryData = 17; // JSONB data as string map
}

message SubAssetTelemetryProto {
  string assetId = 1;
  google.protobuf.Timestamp timestamp = 2;
  optional double latitude = 3;
  optional double longitude = 4;
  optional double altitude = 5;
  optional double relativeAltitude = 6;
  optional double heading = 7;
  optional double horizontalSpeed = 8;
  optional double verticalSpeed = 9;
  optional double windSpeed = 10;
  optional double batteryPercentage = 11;
  optional string operationalMode = 12;
  optional bool isOnline = 13;
  string sourceSystem = 14;
  map<string, string> telemetryData = 15; // JSONB data as string map
}
